syntax = "proto3";

option csharp_namespace = "UserManagementService.Grpc";

package user;

service UserService {
    rpc GetUserById(GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
    string user_id = 1;
}

message UserResponse {
    string user_id = 1;
    string username = 2;
    string name = 3;
    string gender = 4;
    string bio = 5;
    int32 age = 6;
    repeated string skills = 7;
    repeated string topics_of_interest = 8;
    string image_url = 9;
    repeated string followers = 10;
    repeated string following = 11;
}
